# stone-bench

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: prepare_data.yaml
configs/datasets/: stonebench.yaml
configs/supervised/: rtdetr_x.yaml  yolo11x_obb.yaml
configs/tiling/: yolo11x_obb_overlap_0.yaml  yolo11x_obb_overlap_128.yaml  yolo11x_obb_overlap_256.yaml
configs/zeroshot/: detic_swinb.yaml  groundingdino_b.yaml  groundingdino_b_sam21_l.yaml  owlv2_large.yaml  qwen25_vl_7b.yaml  sam21_l_auto.yaml  tiled_owlv2_large_sam21_l.yaml  yolo_world_x.yaml  yoloe_26x_seg.yaml
data/: README.md
data/manifests/: checksums.json  dataset_sources.md  datasets.csv  download_sources.csv  splits.json
docs/: annotation_format.md  dataset_card.md  evaluation_protocol.md  local_inference_and_training.md  reproduction.md
results/: README.md
results/tables/: size_distribution_metrics.csv  supervised_per_dataset.csv  table_manifest.json  tiling_ablation.csv  zero_shot_leaderboard.csv  zero_shot_per_dataset.csv
scripts/: download_data.py  download_mendeley.py  download_roboflow.py  evaluate_detection.py  evaluate_granulometry.py  make_tables.py  predict_ultralytics_obb.py  prepare_data.py  run_foundation_models.py  run_foundational.py  run_tiled_inference.py  run_zeroshot.py  train_rtdetr_x.py  train_supervised.py  train_yolo_obb.py
src/stones_fragmentation/: __main__.py  cli.py  io.py
src/stones_fragmentation/data/: __init__.py
src/stones_fragmentation/infer/: __init__.py
src/stones_fragmentation/metrics/: __init__.py  detection.py  (+1 more)
