[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stone-bench"
version = "0.1.0"
description = "Local benchmark toolkit for rock-fragment detection and granulometric evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "Pillow>=10.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
yolo = [
    "ultralytics>=8.3.0",
]
foundation = [
    "torch>=2.1",
    "torchvision>=0.16",
    "transformers>=4.44",
]
vlm = [
    "accelerate>=0.33",
    "qwen-vl-utils>=0.0.8",
]

[project.scripts]
stone-bench = "stones_fragmentation.cli:main"
stones-fragmentation = "stones_fragmentation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
